Fixed Search field and navbar overlap on ipad pro

--- a/src/Components/Search/search.module.scss
+++ b/src/Components/Search/search.module.scss
@@ -273,7 +273,7 @@
 @include large {
   .search-main-container {
     height: 12vh;
-    top: 10vh;
+    top: 9.9vh;
   }
 
   .search-input {
